NEWS about R package optimz

TODO

	require(optimz)
	testfn = function(x) sum(x*x)
	ans <- optimx(fn = testfn, par = 1:4, control=list(trace=2))
	# order by method name. (fails!)
	summary(ans, order = rownames)

        AND lbfgs3 and Rcgmin and Rvmmin fail!!


      o need a NEW mechanism for controls that are special to 
	individual methods 140902. Can we use control$methopt as 
	a list, with sub-lists for each method. How to convert
	methname ?? -- eval(parse(text=...)). Note Gabor's suggestion
	to put in a list form of method.

      o nlm has ARGUMENTS not control arguments for print.level, 
	gradtol etc. How many will we consider as possible??

      o Rtnmin not working on some examples. start=(1:10)/3, gs=10
        works for octave, not for R. ?? May now be fixed. Check.140904
        tn uses envjn, tnbc does too??
      o tn and tnbc do not have proper controls yet for iterations and
	trace

      o lbfgsb3 explanation poor. No convcode at the moment. 140901
        Also no control of function or gradient max. -- Always f&g 
	computed together (tn may be like this too??).

      o The bdmsk vector is set clumsily for Rvmmin.

      o Where should input checks be done? We should be able to leave them
	out more easily to make code more efficient.

      o Keep thinking about scaling as in optim() -- use same environment as in tn,
	but change the name

      o Move anything of value in optplus to optimz

      o Consider how to subsume routines in optim() so that optimx can become
	a recommended package and optim() can be dropped from base-R.

      o minqa routines -- not giving convcode=1 when out of iterations
      o May want to tweak bobyqa, newuoa default controls.

      o Support for control$maximize:  150429
	- optimx.setup.R should define ufn, ugr, uhess so that the process
	is a MINIMIZATION. Need a parameter minimizeorig in ctrl so we can 
	change ctrl$minimize to TRUE and then revert it after solution for