@@ -1,6 +1,6 @@
 Package: optimz
-Version: 2015.4.27
-Date: 2014-04-27
+Version: 2015.5.3
+Date: 2014-04-03
 Title: A Replacement and Extension of the `optim()` Function
 Authors@R: c( person(given = c("John", "C"), family = "Nash", role =
         c("aut", "cre"), email = "nashjc@uottawa.ca"), person(given =
