@@ -1,0 +1,19 @@
+require(optimz)
+	
+ans <- optimx(fn = testfn, par = 1:4, control=list(trace=2))
+
+# order by method name.
+summary(ans, order=rownames)
+
+tmp <- readline("test components")
+av <- Rvmmin(fn=testfn, par = 1:4, control=list(trace=2))
+print(av)
+tmp <- readline("above is Rvmmin")
+control<-ctrldefault(4)
+control$trace<-2
+al <- lbfgsb3(fn=testfn, par = 1:4, control=list(trace=2))
+print(al)
+tmp <- readline("above is lbfgsb3")
+ac <- Rcgmin(fn=testfn, par = 1:4, control=list(trace=2))
+print(ac)
+tmp <- readline("above is Rcgmin")
